--- a/data/Webpage/index.html
+++ b/data/Webpage/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Recommendation System</title>
+    <!-- Bootstrap CSS link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>Welcome to the Movie Recommendation System</h1>
-    <p>Choose how you want to get movie recommendations:</p>
-    <ul>
-        <li><a href="byTitle.html">By Movie Title</a></li>
-        <li><a href="byGenre.html">By Genre</a></li>
-    </ul>
+<body class="bg-light">
+    <div class="container mt-5">
+        <h1 class="mb-4">Welcome to the Movie Recommendation System</h1>
+        <p>Choose how you want to get movie recommendations:</p>
+        <ul class="list-group">
+            <!-- <li class="list-group-item"><a href="reretitle.html">By Movie Title</a></li>
+            <li class="list-group-item"><a href="reregenre.html">By Genre</a></li> -->
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/title">By Movie Title</a></li>
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/genre">By Genre</a></li>
+            <li class="list-group-item"><a href="http://127.0.0.1:5000/recommendation_engine">Recommendation Engine</a></li>
+        </ul>
+    </div>
+
+    <!-- Bootstrap JS and Popper.js scripts (required for Bootstrap functionality) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
