--- a/data/Webpage/index.html
+++ b/data/Webpage/index.html
@@ -12,7 +12,7 @@
 <body class="bg-light">
     <div class="container mt-5">
         <!-- Replace the text with an image -->
-        <h1 class="mb-4"><img src="logo.png" alt="Movie Recommendation System Logo" width="600px"></h1>
+        <h1 class="mb-4"><img src="../static/css/logo.png" alt="Movie Recommendation System Logo" width="600px"></h1>
             <!-- Card for movie recommendation options -->
     <div class="card">
         <div class="card-body">
